# ChessGUI

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  main.cpp
chess/: Board.cpp  Board.h  FlatBoard.cpp  FlatBoard.h  Game.cpp  Game.h
chess/pieces/: Bishop.cpp  Bishop.h  Empty.cpp  Empty.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
qt/: ClickableSquares.cpp  ClickableSquares.h  GameUI.cpp  GameUI.h  Timer.cpp  Timer.h
